--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SBR_WEBDRIVER="https://brd-customer-hl_f4d16829-zone-scraping_browser1:cpkxo0m3bxtu@brd.superproxy.io:9515"
+SBR_WEBDRIVER="https://brd-customer-hl_c3fd7831-zone-scraping_browser1:xbey9tpu7beb@brd.superproxy.io:9515"
